--- a/.github/workflows/appium-android.yml
+++ b/.github/workflows/appium-android.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        api level: [29]
+        api-level: [29]
         target: [default]
     steps:
     - uses: actions/checkout@v2
