--- a/.github/workflows/appium-android.yml
+++ b/.github/workflows/appium-android.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         api-level: [29]
