--- a/.github/workflows/appium-android.yml
+++ b/.github/workflows/appium-android.yml
@@ -14,32 +14,44 @@ on:
   pull_request:
     branches: [ "main" ]
 
-jobs:
-  build:
+# jobs:
+#   build:
 
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        api-level: [29]
-        target: [default]
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         api-level: [29]
+#         target: [default]
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Set up JDK 1.8
+#       uses: actions/setup-java@v1
+#       with:
+#         java-version: '1.8'
+#     - uses: actions/setup-node@v2
+#       with:
+#         node-version: '16'
+#     - run : |
+#             npm install -g appium@v1.20.2
+#             appium -v
+#             appium &>/dev/null &
+#     - name: Android Emulator Runner Without SDK Setup
+#       uses: RandyLutcavich/android-emulator-runner-without-sdk-setup@v1.0.3
+#       with:
+#         api-level: ${{ matrix.api-level }}
+#         target: ${{ matrix.target }}
+#         arch: x86_64
+#         profile: Nexus 6
+#         script: mvn clean test -Pandroid
+jobs:
+  test:
+    runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: '1.8'
-    - uses: actions/setup-node@v2
-      with:
-        node-version: '16'
-    - run : |
-            npm install -g appium@v1.20.2
-            appium -v
-            appium &>/dev/null &
-    - name: Android Emulator Runner Without SDK Setup
-      uses: RandyLutcavich/android-emulator-runner-without-sdk-setup@v1.0.3
-      with:
-        api-level: ${{ matrix.api-level }}
-        target: ${{ matrix.target }}
-        arch: x86_64
-        profile: Nexus 6
-        script: mvn clean test -Pandroid
+      - name: checkout
+        uses: actions/checkout@v3
+
+      - name: run tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          script: mvn clean test -Pandroid
