--- a/.github/workflows/appium-android.yml
+++ b/.github/workflows/appium-android.yml
@@ -10,39 +10,77 @@ name: Appium Android
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        api-level: [29]
-        target: [default]
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: '1.8'
-    - uses: actions/setup-node@v2
-      with:
-        node-version: '16'
-    - run : |
-            npm install -g appium@v1.20.2
-            appium -v
-            appium &>/dev/null &
-    - name: Run Appium Tests
-      uses: reactivecircus/android-emulator-runner@v2
-      with:
-        api-level: ${{ matrix.api-level }}
-        target: ${{ matrix.target }}
-        arch: x86_64
-        profile: Nexus 6
-        script: mvn test
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+
+      - name: Set up Android emulator
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          target: default
+          architecture: x86
+
+      - name: Start emulator
+        run: emulator -avd emulator-29 -no-audio -no-window &
+
+      - name: Wait for emulator to start
+        run: android-wait-for-emulator
+
+      - name: Build and test with Maven
+        run: mvn clean install -Pandroid
+
+      - name: Run Appium tests
+        run: mvn test
+
+
+# on:
+#   push:
+#     branches: [ "main" ]
+#   pull_request:
+#     branches: [ "main" ]
+
+# jobs:
+#   build:
+
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         api-level: [29]
+#         target: [default]
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Set up JDK 1.8
+#       uses: actions/setup-java@v1
+#       with:
+#         java-version: '1.8'
+#     - uses: actions/setup-node@v2
+#       with:
+#         node-version: '16'
+#     - run : |
+#             npm install -g appium@v1.20.2
+#             appium -v
+#             appium &>/dev/null &
+#     - name: Run Appium Tests
+#       uses: reactivecircus/android-emulator-runner@v2
+#       with:
+#         api-level: ${{ matrix.api-level }}
+#         target: ${{ matrix.target }}
+#         arch: x86_64
+#         profile: Nexus 6
+#         script: mvn test
 
 # jobs:
 #   test:
