--- a/.github/workflows/appium-android.yml
+++ b/.github/workflows/appium-android.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          jdk: '11'
           
       # Adding to resolve error
       - name: Set up Android SDK
