--- a/.github/workflows/appium-android.yml
+++ b/.github/workflows/appium-android.yml
@@ -25,6 +25,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
+          java-version: '11'
           jdk: '11'
           
       # Adding to resolve error
