--- a/.github/workflows/appium-android.yml
+++ b/.github/workflows/appium-android.yml
@@ -44,7 +44,25 @@ jobs:
           api-level: '29'
           emulator-version: '30.1.5'
           profile: 'Nexus 5'
+        
+      - name: Start Android emulator
+        run: echo no | avdmanager create avd --force -n test -k "system-images;android-29;google_apis;x86"
 
+      - name: Launch Android emulator
+        run: $ANDROID_HOME/emulator/emulator -avd test -no-window -no-audio &
+
+      - name: Wait for emulator to start
+        run: |
+          |
+          sleep 10
+          while ! adb devices | grep -w emulator-5554; do sleep 5; done
+      - name: Run Maven commands
+        run: |
+          mvn clean install
+
+      - name: Run tests
+        run: |
+          mvn test
 
 #       - name: Set up Android emulator
 #         uses: reactivecircus/android-emulator-runner@v2
@@ -55,17 +73,17 @@ jobs:
 #           profile: Nexus 6
 #           hw-options: hw.gpu.mode=auto
 
-      - name: Start emulator
-        run: emulator -avd Nexus6_API29 -no-audio -no-window &
+#       - name: Start emulator
+#         run: emulator -avd Nexus6_API29 -no-audio -no-window &
 
-      - name: Wait for emulator to start
-        run: android-wait-for-emulator
+#       - name: Wait for emulator to start
+#         run: android-wait-for-emulator
 
-      - name: Build and test with Maven
-        run: mvn clean install -Pandroid
+#       - name: Build and test with Maven
+#         run: mvn clean install -Pandroid
 
-      - name: Run Appium tests
-        run: mvn test
+#       - name: Run Appium tests
+#         run: mvn test
 
 # on:
 #   push:
