--- a/.github/workflows/appium-android.yml
+++ b/.github/workflows/appium-android.yml
@@ -46,10 +46,11 @@ jobs:
           profile: 'Nexus 5'
         
       - name: Start Android emulator
-        run: echo no | avdmanager create avd --force -n test -k "system-images;android-29;google_apis;x86"
+        run: |
+          echo no | avdmanager create avd --force -n emulator-5554 -k "system-images;android-29;google_apis;x86"
+          $ANDROID_HOME/emulator/emulator -avd emulator-5554 -no-window -no-audio &
 
-      - name: Launch Android emulator
-        run: $ANDROID_HOME/emulator/emulator -avd test -no-window -no-audio &
+    
 
       - name: Wait for emulator to start
         run: android-wait-for-emulator
