--- a/.github/workflows/appium-android.yml
+++ b/.github/workflows/appium-android.yml
@@ -53,7 +53,9 @@ jobs:
     
 
       - name: Wait for emulator to start
-        run: android-wait-for-emulator
+        run: |
+          sleep 10
+          while ! adb devices | grep -w emulator-5554; do sleep 5; done
         
       - name: Run Maven commands
         run: |
